--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <script src='index.js'></script>
 </head>
 <body>
-    <nav>
-        <div>
+    <nav class="container">
+        <div class="nav-brand">
             <a class="link" href="/">The Kitchen Cafe & Restro</a>
         </div>
-        <div>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/">Menu</a></li>
-                <li><a href="/">Dine-In</a></li>
-                <li><a href="/">About-Us</a></li>
-                <li><a href="/">Cart</a></li>
-                <li><a href="/">Sign-In</a></li>
-                <li><a href="/">Sign-Up</a></li>
+        <div class="">
+            <ul class="list-non-bullet">
+                <li class="list=item-inline"><a class="link" href="/">Home</a></li>
+                <li class="list=item-inline"><a class="link" href="/">Menu</a></li>
+                <li class="list=item-inline"><a class="link" href="/">Dine-In</a></li>
+                <li class="list=item-inline"><a class="link" href="/">About-Us</a></li>
+                <li class="list=item-inline"><a class="link" href="/">Cart</a></li>
+                <li class="list=item-inline"><a class="link" href="/">Sign-In</a></li>
+                <li class="list=item-inline"><a class="link" href="/">Sign-Up</a></li>
             </ul>
         </div>
     </nav>
