navbar links are decorated

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
           alt="kitchen logo"
           width="20 rem"
         />
-        <a class="link" href="/">The Kitchen Cafe & Restro</a>
+        <a class="header-link link" href="/">The Kitchen Cafe & Restro</a>
       </div>
 
       <nav class="navbar">
         <ul class="navbar-list-non-bullet">
-          <li class="navbar-list-inline"><a class="navbar-link" href="/">Home</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link" href="/">Menu</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link" href="/">Dine-In</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link" href="/">About-Us</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link" href="/">Cart</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link" href="/">Sign-In</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link" href="/">Sign-Up</a></li>
+          <li class="navbar-list-inline"><a class="navbar-link link" href="/">Home</a></li>
+          <li class="navbar-list-inline"><a class="navbar-link link" href="/">Menu</a></li>
+          <li class="navbar-list-inline"><a class="navbar-link link" href="/">Dine-In</a></li>
+          <li class="navbar-list-inline"><a class="navbar-link link" href="/">About-Us</a></li>
+          <li class="navbar-list-inline"><a class="navbar-link link" href="/">Cart</a></li>
+          <li class="navbar-list-inline"><a class="navbar-link link" href="/">Sign-In</a></li>
+          <li class="navbar-list-inline"><a class="navbar-link link sign-up-link" href="/">Sign-Up</a></li>
         </ul>
       </nav>
     </header>
