--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
           <li class="navbar-list-inline"><a class="navbar-link link sign-up-link" href="/">Sign-Up</a></li>
         </ul>
       </nav>
+
+      <div class="navbar-mobile-btn">
+        <ion-icon name="menu-outline" class="nav-mobile-icon"></ion-icon>
+      </div>
+
+
     </header>
 
     <main>
