--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
       <div class="navbar-mobile-btn">
         <ion-icon name="menu-outline" class="nav-mobile-icon"></ion-icon>
+        <ion-icon name="close-outline" class="nav-mobile-icon"></ion-icon>
       </div>
 
 
@@ -48,6 +49,13 @@
     </footer>
 
 
+
+
+<!-- ==========================================================================
+                  javaScript section for menu
+===============================================================================-->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 
   </body>
