make a media query for mobile responsive site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="index.js"></script>
   </head>
   <body>
+
+    <!-- =========Header Start================= -->
     <header class="header">
       <div class="header-div">
         <img
@@ -40,14 +42,20 @@
 
 
     </header>
+    <!-- ===============Header end============ -->
 
+
+    <!-- ================Main start===================== -->
     <main>
         <h1>main </h1>
     </main>
+    <!-- ==================Main end===================== -->
 
+    <!-- ==================Footer start===================== -->
     <footer>
         <h2>footer</h2>
     </footer>
+    <!-- ==================Footer end======================= -->
 
 
 
