did some css for responsive menu bar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <nav class="navbar">
-        <ul class="navbar-list-non-bullet">
+        <ul class="navbar-list">
           <li class="navbar-list-inline"><a class="navbar-link link" href="/">Home</a></li>
           <li class="navbar-list-inline"><a class="navbar-link link" href="/">Menu</a></li>
           <li class="navbar-list-inline"><a class="navbar-link link" href="/">Dine-In</a></li>
