--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <!-- =========Header Start================= -->
-    <header class="header">
+    <header class="header active">
       <div class="header-div">
         <img
           class="logo"
