--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>The Kitchen cafe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
   </head>
   <body>
 
@@ -67,5 +67,6 @@
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 
+    <script src="index.js"></script>
   </body>
 </html>
