write footer html

--- a/index.html
+++ b/index.html
@@ -52,8 +52,41 @@
     <!-- ==================Main end===================== -->
 
     <!-- ==================Footer start===================== -->
-    <footer>
-        <h2>footer</h2>
+    <footer class="footer">
+        <div class="footer-div">
+          <div class="footer-div-row">
+            <div class="footer-div-row-col">
+              <h4>About</h4>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">menu</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Dine In</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Sign In</a></li>
+              </ul>
+            </div>
+            <div class="footer-div-row-col">
+              <h4>Partner With us</h4>
+              <ul>
+                <li><a href="#">ss</a></li>
+              </ul>
+            </div>
+            <div class="footer-div-row-col">
+              <h4>Support</h4>
+              <ul>
+                <li><a href="#">dd</a></li>
+              </ul>
+            </div>
+            <div class="footer-div-row-col">
+              <h4>Contact</h4>
+              <ul>
+                <li><a href="#">ff</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        
     </footer>
     <!-- ==================Footer end======================= -->
 
