--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <!-- <script src="index.js"></script> -->
   </head>
   <body>
-
     <!-- =========Header Start================= -->
     <header class="header">
       <div class="header-div">
@@ -24,81 +23,108 @@
 
       <nav class="navbar">
         <ul class="navbar-list">
-          <li class="navbar-list-inline"><a class="navbar-link link" href="/">Home</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link link" href="/">Menu</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link link" href="/">Dine-In</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link link" href="/">About-Us</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link link" href="/">Cart</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link link" href="/">Sign-In</a></li>
-          <li class="navbar-list-inline"><a class="navbar-link link sign-up-link" href="/">Sign-Up</a></li>
+          <li class="navbar-list-inline">
+            <a class="navbar-link link" href="/">Home</a>
+          </li>
+          <li class="navbar-list-inline">
+            <a class="navbar-link link" href="/">Menu</a>
+          </li>
+          <li class="navbar-list-inline">
+            <a class="navbar-link link" href="/">Dine-In</a>
+          </li>
+          <li class="navbar-list-inline">
+            <a class="navbar-link link" href="/">About-Us</a>
+          </li>
+          <li class="navbar-list-inline">
+            <a class="navbar-link link" href="/">Cart</a>
+          </li>
+          <li class="navbar-list-inline">
+            <a class="navbar-link link" href="/">Sign-In</a>
+          </li>
+          <li class="navbar-list-inline">
+            <a class="navbar-link link sign-up-link" href="/">Sign-Up</a>
+          </li>
         </ul>
       </nav>
 
-      
       <div class="navbar-mobile-btn">
         <ion-icon name="menu-outline" class="nav-mobile-icon"></ion-icon>
         <ion-icon name="close-outline" class="nav-mobile-icon"></ion-icon>
       </div>
-
-
     </header>
     <!-- ===============Header end============ -->
 
-
     <!-- ================Main start===================== -->
     <main>
-        <h1>main </h1>
+      <h1>main</h1>
     </main>
     <!-- ==================Main end===================== -->
 
     <!-- ==================Footer start===================== -->
     <footer class="footer">
-        <div class="footer-div">
-          <div class="footer-div-row">
-            <div class="footer-div-row-col">
-              <h4>About</h4>
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">menu</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Dine In</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Sign In</a></li>
-              </ul>
-            </div>
-            <div class="footer-div-row-col">
-              <h4>Partner With us</h4>
-              <ul>
-                <li><a href="#">ss</a></li>
-              </ul>
-            </div>
-            <div class="footer-div-row-col">
-              <h4>Support</h4>
-              <ul>
-                <li><a href="#">dd</a></li>
-              </ul>
-            </div>
-            <div class="footer-div-row-col">
-              <h4>Contact</h4>
-              <ul>
-                <li><a href="#">ff</a></li>
-              </ul>
-            </div>
+      <div class="footer-div">
+        <div class="footer-div-row">
+          <div class="footer-div-row-col">
+            <img
+              class="logo footer-logo"
+              src="Images/logo.jpg"
+              alt="kitchen logo"
+              width="20 rem"
+            />
+          </div>
+          <div class="footer-div-row-col">
+            <h4>About</h4>
+            <ul>
+              <li><a class="link" href="#">Home</a></li>
+              <li><a class="link" href="#">menu</a></li>
+              <li><a class="link" href="#">Blog</a></li>
+              <li><a class="link" href="#">Dine In</a></li>
+              <li><a class="link" href="#">About Us</a></li>
+              <li><a class="link" href="#">Sign In</a></li>
+            </ul>
+          </div>
+          <div class="footer-div-row-col">
+            <h4>Partner With us</h4>
+            <ul>
+              <li><a class="link" href="#">Partnership program</a></li>
+              <li><a class="link" href="#">Promotions and events</a></li>
+              <li><a class="link" href="#">Integrations</a></li>
+            </ul>
+          </div>
+          <div class="footer-div-row-col">
+            <h4>Support</h4>
+            <ul>
+              <li><a class="link" href="#">Help center</a></li>
+              <li><a class="link" href="#">Contact Us</a></li>
+              <li><a class="link" href="#">Our services</a></li>
+              <li><a class="link" href="#">Feedback</a></li>
+            </ul>
+          </div>
+          <div class="footer-div-row-col">
+            <h4>Contact</h4>
+            <ul>
+              <li>Phone: 99999999</li>
+              <li><a class="link" href="#">E-mail: mykitchencafe@gmail.com</a></li>
+              <li>Address: Magneto Mall Raipur 492013</li>
+              <li><a class="link" href="#">ff</a></li>
+            </ul>
           </div>
         </div>
-        
+      </div>
     </footer>
     <!-- ==================Footer end======================= -->
 
-
-
-
-<!-- ====================================================================
+    <!-- ====================================================================
                   javaScript section for menu
 ======================================================================-->
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
 
     <script src="index.js"></script>
   </body>
