--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
     <footer class="footer">
       <div class="footer-div">
         <div class="footer-div-row">
-          <div class="footer-div-row-col">
+          
             <img
               class="logo footer-logo"
               src="Images/logo.jpg"
               alt="kitchen logo"
               width="20 rem"
             />
-          </div>
+
+          
           <div class="footer-div-row-col">
             <h4>About</h4>
             <ul>
@@ -104,7 +105,7 @@
             <h4>Contact</h4>
             <ul>
               <li>Phone: 99999999</li>
-              <li><a class="link" href="#">E-mail: mykitchencafe@gmail.com</a></li>
+              <li><a class="link" href="#"></a></li>
               <li>Address: Magneto Mall Raipur 492013</li>
               <li><a class="link" href="#">ff</a></li>
             </ul>
