make a section and img import

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
 
     <!-- ================Main start===================== -->
     <main>
-      <h1>main</h1>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
     </main>
     <!-- ==================Main end===================== -->
 
