slider img code

--- a/index.html
+++ b/index.html
@@ -56,11 +56,24 @@
 
     <!-- ================Main start===================== -->
     <main>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="slider">
+        <div class="slider-img">
+          <img src="Images/1st.jpg" alt="food1">
+        </div>
+        <div class="slider-img">
+          <img src="Images/2nd.jpg" alt="food1">
+        </div>
+        <div class="slider-img">
+          <img src="Images/3rd.jpg" alt="food1">
+        </div>
+        <div class="slider-img">
+          <img src="Images/4th.jpg" alt="food1">
+        </div>
+      </section>
+      <section>Indoor Dining</section>
+      <section>Our Story</section>
+      <section>Reservation</section>
+      <section>Testimonial</section>
     </main>
     <!-- ==================Main end===================== -->
 
