--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
 
     <!-- ================Main start===================== -->
     <main>
-      <section class="slider">
-        <div class="slider-img">
-          <img src="Images/1st.jpg" alt="food1">
+      <section class="section-wrapper">
+        <div class="slide">
+          <img class="slider-img" src="Images/4th.jpg" alt="food1">
         </div>
-        <div class="slider-img">
-          <img src="Images/2nd.jpg" alt="food1">
+        <div class="slide">
+          <img class="slider-img" src="Images/2nd.jpg" alt="food1">
         </div>
-        <div class="slider-img">
-          <img src="Images/3rd.jpg" alt="food1">
+        <div class="slide">
+          <img class="slider-img" src="Images/3rd.jpg" alt="food1">
         </div>
-        <div class="slider-img">
-          <img src="Images/4th.jpg" alt="food1">
+        <div class="slide">
+          <img class="slider-img" src="Images/5th.jpg" alt="food1">
         </div>
       </section>
       <section>Indoor Dining</section>
