3rd section done

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </section>
       <section class="story">
         <div class="story-one">
-          <p><span>Our Story</span> to the kitchen cafe & restro 
+          <p><span class="pan">Our Story</span> <br/>Welcome to the kitchen cafe & restro 
             Blending Culture, Coffee & Delicious Food Bringing you a delicious menu in our beautiful gathering space. where every dish is a journey, and every meal is a story waiting to be told.</p>
           
           <img class="one-img" src="Images/one (1).jpg" alt="cafe-hall" />  
@@ -127,7 +127,13 @@
           <p>“Where Dinning Meets Deligth, Every Momoent Shines”<br/>“Celebrating Flavor, Creating Memories.”</p>
         </div>
       </section>
-      <section>Reservation</section>
+      <section>
+        <h1>Make a Reservation</h1>
+        <div>
+          <img src="" alt="food-image" />
+          <div></div>
+        </div>
+      </section>
       <section>Testimonial</section>
     </main>
     <!-- ==================Main end===================== -->
