4th section css complt

--- a/index.html
+++ b/index.html
@@ -142,14 +142,10 @@
           <div class="card-img">
             <!-- image here -->
           </div>
-          <!-- <img
-            class="reserve-img"
-            src="Images/reserved (1).jpg"
-            alt="food-image"
-          /> -->
+          
 
           <div class="card-content">
-            <h3>Book a Table</h3>
+            <h3>BOOK-TABLE</h3>
             <form>
               <div class="form-row">
                 <select name="Days">
