--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div>
             <h1>Testiomonials</h1>
           <h4>What our customers says</h4>
-          <p>Thank you very much for all your hard work, the outstanding meals and fantastic service. The guests at our wedding were very impressed with you all and many have told us it was the best food they have had at a wedding in a long time. Jack and I are so thankful. All the best for your future endeavours and again, thank you very much.Jack and Izzy</p>
+          <p>"Thank you very much for all your hard work, the outstanding meals and fantastic service. The guests at our wedding were very impressed with you all and many have told us it was the best food they have had at a wedding in a long time. Jack and I are so thankful. All the best for your future endeavours and again, thank you very much." -Jack and Izzy</p>
           </div>
           
         </div>
