--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
             <a class="navbar-link link" href="/">Home</a>
           </li>
           <li class="navbar-list-inline">
-            <a class="navbar-link link" href="/">Menu</a>
+            <a class="navbar-link link" href="menu.html">Menu</a>
           </li>
           <li class="navbar-list-inline">
-            <a class="navbar-link link" href="/">Dine-In</a>
+            <a class="navbar-link link" href="dine-in.html">Dine-In</a>
           </li>
           <li class="navbar-list-inline">
-            <a class="navbar-link link" href="/">About-Us</a>
+            <a class="navbar-link link" href="aboutUs.html">About-Us</a>
           </li>
           <li class="navbar-list-inline">
-            <a class="navbar-link link" href="/">Cart</a>
+            <a class="navbar-link link" href="cart.html">Cart</a>
           </li>
           <li class="navbar-list-inline">
-            <a class="navbar-link link" href="/">Sign-In</a>
+            <a class="navbar-link link" href="signin.html">Sign-In</a>
           </li>
           <li class="navbar-list-inline">
-            <a class="navbar-link link sign-up-link" href="/">Sign-Up</a>
+            <a class="navbar-link link sign-up-link" href="signUp.html">Sign-Up</a>
           </li>
         </ul>
       </nav>
@@ -105,8 +105,8 @@
         </div>
         <hr />
         <div class="dinning dine-link">
-          <a href="#" class="dlink link">Our Menus</a>
-          <a href="#" class="dlink link">Dine In</a>
+          <a href="menu.html" class="dlink link">Our Menus</a>
+          <a href="dine-in.html" class="dlink link">Dine In</a>
         </div>
         <hr />
         <div class="dinning dine-time">
@@ -216,20 +216,20 @@
             <h4>About</h4>
             <ul>
               <li><a class="link" href="/">Home</a></li>
-              <li><a class="link" href="#">menu</a></li>
+              <li><a class="link" href="menu.html">menu</a></li>
               <li><a class="link" href="#">Blog</a></li>
-              <li><a class="link" href="#">Dine In</a></li>
-              <li><a class="link" href="#">Sign In</a></li>
+              <li><a class="link" href="dine-in.html">Dine In</a></li>
+              <li><a class="link" href="signin.html">Sign In</a></li>
             </ul>
           </div>
           
           <div class="footer-div-row-col">
             <h4>Support</h4>
             <ul>
-              <li><a class="link" href="#">About Us</a></li>
-              <li><a class="link" href="#">Contact Us</a></li>
-              <li><a class="link" href="#">Our services</a></li>
-              <li><a class="link" href="#">Feedback</a></li>
+              <li><a class="link" href="aboutUs.html">About Us</a></li>
+              <li><a class="link" href="contactUs.html">Contact Us</a></li>
+              <li><a class="link" href="ourServices.html">Our services</a></li>
+              <li><a class="link" href="feedback.html">Feedback</a></li>
             </ul>
           </div>
           <div class="footer-div-row-col">
