--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       <section class="section">
         <div class="slider">
           <div class="slides">
+            <!-- <input type="radio" name="radio-btn" />
             <input type="radio" name="radio-btn" />
             <input type="radio" name="radio-btn" />
-            <input type="radio" name="radio-btn" />
-            <input type="radio" name="radio-btn" />
+            <input type="radio" name="radio-btn" /> -->
             <div class="slide first">
               <img class="slide-img" src="Images/4th.jpg" alt="food1" />
             </div>
@@ -77,20 +77,20 @@
               <img class="slide-img" src="Images/5th.jpg" alt="food1" />
             </div>
 
-            <div class="nav-auto">
+            <!-- <div class="nav-auto">
               <div class="a-b1"></div>
               <div class="a-b2"></div>
               <div class="a-b3"></div>
               <div class="a-b4"></div>
-            </div>
+            </div> -->
           </div>
 
-          <div class="nav-m">
+          <!-- <div class="nav-m">
             <label for="radio1" class="m-btn"></label>
             <label for="radio1" class="m-btn"></label>
             <label for="radio1" class="m-btn"></label>
             <label for="radio1" class="m-btn"></label>
-          </div>
+          </div> -->
         </div>
       </section>
       <section class="dinning-section">
