--- a/menu.html
+++ b/menu.html
@@ -216,11 +216,11 @@
         <hr />
         <div class="main-menu-div">
           
-          <a class="link" href=""></a>
+          <a class="link" href="">Desserts</a>
           <div class="inner-div">
             <div class="inner-most-card-div">
-              <img src="Images/chinese (4).jpg" />
-              <h4>Noodle</h4>
+              <img src="Images/Rasmalai.jpg" />
+              <h4>Rasmalai</h4>
               <h4>Price: ₹198.10</h4>
               <div class="btn-div-menu">
                 <button>Add to Cart</button>
@@ -228,8 +228,8 @@
               </div>
             </div>
             <div class="inner-most-card-div">
-              <img src="Images/chinese (2).jpg" />
-              <h4>Veg Roll</h4>
+              <img src="Images/desserts (1).jpg" />
+              <h4>Brownie</h4>
               <h4>Price: ₹298.10</h4>
               <div class="btn-div-menu">
                 <button>Add to Cart</button>
@@ -237,15 +237,14 @@
               </div>
             </div>
             <div class="inner-most-card-div">
-              <img src="Images/chinese (3).jpg" />
-              <h4>Sweet Corn</h4>
+              <img src="Images/desserts (3).jpg" />
+              <h4>Cup cake</h4>
               <h4>Price: ₹398.10</h4>
               <div class="btn-div-menu">
                 <button>Add to Cart</button>
                 <button>Buy Now</button>
               </div>
             </div>
-            
           </div>
         </div>
 
