services and cart added

--- a/ourServices.html
+++ b/ourServices.html
@@ -60,6 +60,41 @@
     <!-- ================Main start===================== -->
     <main>
 
+      <div class="services-div-main-img">
+        <div  class="freespaceRectangle"></div><span  class="free_space">FREE SPACE</span>
+        <div  class="relaxedEnviromentRectangle"></div><span  class="relaxed_enviroment">RELAXED ENVIROMENT</span>
+        <div  class="perfect_servingRectangle"></div><span  class="perfect_serving">PERFECT SERVING</span>
+        <div  class="aromatic_smellRectangle"></div><span  class="aromatic_smell">AROMATIC SMELL</span>
+        <div  class="best_dishesRectangle"></div><span  class="best_dishes">BEST DISHES</span>
+        <div  class="rectangle_1"></div>
+        <div  class="rectangle_2"></div>
+        <div  class="rectangle_3"></div>
+        <div  class="rectangle_4"></div>
+        <div  class="rectangle_5"></div>
+        <span  class="freespace_detail"> Restaurants aim to provide
+          a pleasant and enjoyable
+          dining experience</span>
+        <span  class="restaurants_aim"> Restaurants aim to provide
+          a pleasant and enjoyable
+          dining experience</span>
+          <span  class="good_customer">Good customer service is
+          crucial to a restaurant's
+          success.</span>
+          <span  class="maintaining_a_clean"> Maintaining a clean and
+          sanitary environment is 
+         crucial to ensure the health
+          and safety of customers</span>
+          <span  class="restaurants_aim">Restaurants aim to provide
+          a pleasant and enjoyable
+          dining experience</span>
+          <span  class="aromatic_smells_in_a_restaurant">The primary source of 
+         aromatic smells in a 
+         restaurant is the kitchen. 
+         The cooking techniques.</span></div>
+  
+        </div>
+
+
         
     </main>
     <!-- ==================Main end===================== -->
