--- a/signin.html
+++ b/signin.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+
+    <link rel="stylesheet" type="text/css" href="signin.css" />
+
     <!-- <script src="index.js"></script> -->
   </head>
   <body>
@@ -60,6 +63,22 @@
     <!-- ================Main start===================== -->
     <main>
 
+      <br>
+      <div class="container">
+        <form id="loginForm" >
+            <h2>Login</h2><br>
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required placeholder="Enter your username here">
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required placeholder="Enter your password here">
+            </div><br>
+            <button type="submit">Login</button>
+        </form>
+    </div>
+        <br>
         
     </main>
     <!-- ==================Main end===================== -->
