--- a/menu.html
+++ b/menu.html
@@ -62,8 +62,8 @@
       <div class="menuss">
         <h1>Menus</h1>
         <ul>
-          <li>Pizza</li>
-          <li>Burger</li>
+          <li><a href="#food1">Pizza</a></li>
+          <li><a href="#food2">Burger</a></li>
           <li>Sandwich</li>
           <li>Chinese food</li>
           <li>Desserts</li>
@@ -71,10 +71,10 @@
         </ul>
       </div>
       <div class="outer-menu-div">
-        <hr />
+        <hr id="food1" />
         <div class="main-menu-div">
           
-          <a class="link" href="">Pizza</a>
+          <a class="link" id="food1" href="">Pizza</a>
           <div class="inner-div">
             <div class="inner-most-card-div">
               <img src="Images/pizza (1).jpg" />
